--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>dev.connor33341</groupId>
-    <artifactId>DatabaseManager</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>databasemanager</artifactId>
+    <version>1.0</version>
     <packaging>jar</packaging>
 
 
